# PRISM

./: .gitignore  Cargo.toml  DOCKER_BUILD_SUCCESS.md  DOCKER_DEPLOYMENT_COMPLETE.md  DOCKER_FIX_v1.1.1.md  Dockerfile  Dockerfile.runpod  FINAL_DEPLOYMENT_STATUS.md  FINAL_GPU_TEST_RESULTS.md  FLUXNET_ADAPTIVE_RL_IMPLEMENTATION_STATUS.md  FLUXNET_RL_GPU_IMPLEMENTATION_SUMMARY.md  FLUXNET_WORKTREE_SETUP_COMPLETE.md  GPU_ACCELERATION_AUDIT.md  GPU_IMPLEMENTATION_TEST_RESULTS.md  GPU_PIPELINE_IMPLEMENTATION.md  GPU_STREAMS_INTEGRATION_STATUS.md  GPU_TELEMETRY_INTEGRATION_REPORT.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  MULTI_GPU_B200_IMPLEMENTATION_REPORT.md  MULTI_GPU_IMPLEMENTATION_REPORT.md  MULTI_GPU_QUICK_START.md  OPTIMIZED_CONFIG_GUIDE.md  PHASE2_FIX_SUMMARY.md  PHASE3_GPU_IMPLEMENTATION_PLAN.md  PHASE_IMPLEMENTATION_STATUS_COMPLETE.md  PRISM_CONFIG_INTEGRATION_GUIDE.md  PRISM_TUNING_VS_LOCAL_COMPARISON.md  README_MULTI_GPU.md  RUNPOD_ACCESS_GUIDE.md  RUNPOD_DEPLOYMENT_GUIDE.md  RUNPOD_QUICKSTART.md  RUNPOD_SSH_TROUBLESHOOTING.md  RUNPOD_VERIFICATION.md  RUN_8XB200_GUIDE.md  RUN_COMMANDS.md  START_HERE.md  TUNABLE_WIREUP_SUMMARY.md  build-and-push.sh  (+7 more)
.claude/: AUTO_ACCEPT_CONFIG.md
.fingerprint/adler2-de33734fda776200/: lib-adler2  lib-adler2.json
.fingerprint/aead-61dfd5807af89046/: lib-aead  lib-aead.json
.fingerprint/aead-d874632adc5516cc/: lib-aead  lib-aead.json
.fingerprint/aes-51ea523df21d4801/: lib-aes  lib-aes.json
.fingerprint/aes-f7b4b59dbb626c61/: lib-aes  lib-aes.json
.fingerprint/aes-gcm-3690d2016b6a212e/: lib-aes_gcm  lib-aes_gcm.json
.fingerprint/aes-gcm-7610ba35fdb5ddb7/: lib-aes_gcm  lib-aes_gcm.json
.fingerprint/aho-corasick-0ed81590f2ae18b2/: lib-aho_corasick  lib-aho_corasick.json
.fingerprint/aho-corasick-549fb29f09559838/: lib-aho_corasick  lib-aho_corasick.json
.fingerprint/aho-corasick-9797de9e2b102cae/: lib-aho_corasick  lib-aho_corasick.json
.fingerprint/aho-corasick-f350bbb2b50a9952/: lib-aho_corasick  lib-aho_corasick.json
.fingerprint/anes-acff39c3711e8267/: lib-anes  lib-anes.json
.fingerprint/anes-da06b5671aff163c/: lib-anes  lib-anes.json
.fingerprint/anstream-9f3414d04fe8eb3d/: lib-anstream  lib-anstream.json
.fingerprint/anstream-eb02ca1bea8d9226/: lib-anstream  lib-anstream.json
.fingerprint/anstyle-65570d73b831b970/: lib-anstyle  lib-anstyle.json
.fingerprint/anstyle-a4690537c55f46bd/: lib-anstyle  lib-anstyle.json
.fingerprint/anstyle-parse-2cee50362d7c3b67/: lib-anstyle_parse  lib-anstyle_parse.json
.fingerprint/anstyle-parse-d09802fbbaa1ea4a/: lib-anstyle_parse  lib-anstyle_parse.json
.fingerprint/anstyle-query-0eb6c0b4a47a2026/: lib-anstyle_query  lib-anstyle_query.json
.fingerprint/anstyle-query-b0e59de1b27cdc9a/: lib-anstyle_query  lib-anstyle_query.json
.fingerprint/anyhow-6c9f42bbb9d233fa/: lib-anyhow  lib-anyhow.json
.fingerprint/anyhow-92f29a13742d64a0/: lib-anyhow  lib-anyhow.json
.fingerprint/anyhow-b3393d6712be2b66/: build-script-build-script-build  build-script-build-script-build.json
.fingerprint/anyhow-b3ab1b3ee9153273/: lib-anyhow  lib-anyhow.json
.fingerprint/anyhow-e1f554b474e8a16f/: run-build-script-build-script-build  run-build-script-build-script-build.json
.fingerprint/approx-0b5e38adde5d122c/: lib-approx  lib-approx.json
.fingerprint/approx-21486e56c52faf52/: lib-approx  lib-approx.json
.fingerprint/approx-6b91e86baefd2307/: lib-approx  lib-approx.json
.fingerprint/approx-a13ecbb7a7a716bc/: lib-approx  lib-approx.json
.fingerprint/argon2-9e8ab260a7e671ac/: lib-argon2  lib-argon2.json
.fingerprint/argon2-ef237ba22fb86341/: lib-argon2  lib-argon2.json
.fingerprint/arrayvec-104f4dceb1c2a7eb/: lib-arrayvec  lib-arrayvec.json
.fingerprint/arrayvec-8dd224ed0246c278/: lib-arrayvec  lib-arrayvec.json
.fingerprint/async-trait-8e5f74a5e1f315a1/: lib-async_trait  lib-async_trait.json
.fingerprint/autocfg-e43f4f6a57543659/: lib-autocfg  lib-autocfg.json
.fingerprint/base16ct-130eabfbf41b6f0d/: lib-base16ct  lib-base16ct.json
.fingerprint/base64-0aaa390cbd040b05/: lib-base64  lib-base64.json
.fingerprint/base64-c5cb9a52f2075ae5/: lib-base64  lib-base64.json
.fingerprint/base64-d7227cd03c7e6027/: lib-base64  lib-base64.json
.fingerprint/base64-e2d9f256589e70bc/: lib-base64  lib-base64.json
.fingerprint/base64ct-4ac23bfa58940923/: lib-base64ct  lib-base64ct.json
.fingerprint/base64ct-97af3ae54df2ba5c/: lib-base64ct  lib-base64ct.json
.fingerprint/bincode-0cca5f61af1181c6/: lib-bincode  lib-bincode.json
.fingerprint/bincode-49ede429a3b39af6/: lib-bincode  lib-bincode.json
.fingerprint/bincode-a0c1af846fc940af/: lib-bincode  lib-bincode.json
.fingerprint/bincode-cc000bc5b1901d6f/: lib-bincode  lib-bincode.json
.fingerprint/bindgen-04d80cb96fa5ad20/: lib-bindgen  lib-bindgen.json
.fingerprint/bindgen-21bc26b27e1f05e9/: build-script-build-script-build  build-script-build-script-build.json
.fingerprint/bindgen-e4595228b1b7067c/: dep-lib-bindgen  lib-bindgen  lib-bindgen.json
.fingerprint/bindgen-f37f595862eeac9a/: run-build-script-build-script-build  (+1 more)
PRISM-AI-UNIFIED-VAULT/: EXECUTIVE-SUMMARY.md  PROJECT-OVERVIEW.md  README.md  device_caps.json  path_decision.json
docker/: build-runpod.sh  entrypoint.sh  run-runpod.sh
docs/: ACTIVE_INFERENCE_PIPELINE_INTEGRATION_PLAN.md  AGGRESSIVE_TELEMETRY_ADP_PLAN.md  CAFA6_IMPLEMENTATION_ROADMAP.md  PRISM_GUI_DASHBOARD_PLAN.md  RUN_TELEMETRY_AND_HYPERTUNE_PLAN.md
examples/: benchmark_dimacs.rs  demo_cpu.rs  llm_consensus_demo.rs  protein_structure_benchmark.rs  simple_dimacs_benchmark.rs  test_dsjc1000.rs  test_ensemble_gpu.rs  test_prism_pipeline.rs  unified_orchestrator.rs  world_record_dsjc1000.rs
foundation/: lib.rs  platform.rs
output/: coloring_result.json  nipah_coloring.json
src/: lib.rs  protein_parser.rs
telemetry/: contract.jsonl  device_guard.jsonl  federation.jsonl  semantic_plasticity.jsonl
tools/: IGNORED_KEYS.txt  knob.sh  lint_overrides.sh  run_wr_seed_probe.sh  run_wr_toml.sh  toml_layered_merge.sh
(+2402 files in other folders)
