[package]
name = "prism-ai"
version = "0.1.0"
edition = "2021"
authors = ["PRISM-AI Research Team"]
description = "PRISM: GPU-accelerated graph coloring with neuromorphic and quantum computing"
license = "MIT"
build = "build.rs"

[features]
default = ["cuda"]
cuda = ["dep:bindgen"]
mlir = []
protein_folding = []
examples = []

[build-dependencies]
cc = "1.0"
bindgen = { version = "0.69", optional = true }

[dependencies]
# Core dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
base64 = "0.21"
anyhow = "1.0"
thiserror = "1.0"

# Math and algorithms
ndarray = "0.15"
nalgebra = "0.32"
rand = "0.8"
rand_distr = "0.4"
petgraph = "0.6"
rayon = "1.7"

# GPU and CUDA
cudarc = { version = "0.9", optional = true }

# Machine Learning
ort = { version = "1.16", features = ["cuda"], optional = true }

# Utilities
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
num-complex = "0.4"
sha2 = "0.10"
hex = "0.4"
bincode = "1.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dashmap = "6.0"
parking_lot = "0.12"
toml = "0.8"
neuromorphic_engine = { path = "foundation/neuromorphic", package = "neuromorphic-engine" }
quantum_engine = { path = "foundation/quantum", package = "quantum-engine" }
futures = "0.3"
hmac = "0.12"

# Metrics and profiling
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3"

[[bin]]
name = "prism-ai"
path = "foundation/lib.rs"

# Examples
[[example]]
name = "benchmark_dimacs"
path = "examples/benchmark_dimacs.rs"
required-features = ["cuda", "examples"]

[[example]]
name = "world_record_attempt"
path = "examples/world_record_attempt.rs"
required-features = ["cuda", "examples"]

[[example]]
name = "test_prism_pipeline"
path = "examples/test_prism_pipeline.rs"
required-features = ["cuda", "examples"]

[[example]]
name = "test_ensemble_gpu"
path = "examples/test_ensemble_gpu.rs"
required-features = ["cuda", "examples"]

[[example]]
name = "test_dsjc1000"
path = "examples/test_dsjc1000.rs"
required-features = ["cuda", "examples"]

[[example]]
name = "generate_training_data"
path = "examples/generate_training_data.rs"
required-features = ["examples"]

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
