[package]
name = "prism-ai"
version = "0.1.0"
edition = "2021"
authors = ["PRISM-AI Research Team"]
description = "PRISM: GPU-accelerated graph coloring with neuromorphic and quantum computing"
license = "MIT"
build = "build.rs"

[features]
default = ["cuda"]
cuda = ["dep:bindgen", "prct-core/cuda", "neuromorphic-engine/cuda"]
pwsa = []
quantum_mlir_support = []
mlir = []
protein_folding = []
examples = []

[build-dependencies]
cc = "1.0"
bindgen = { version = "0.69", optional = true }

[dependencies]
# Core dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
base64 = "0.21"
anyhow = "1.0"
thiserror = "1.0"

# Math and algorithms
ndarray = "0.15"
nalgebra = "0.32"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
petgraph = "0.6"
rayon = "1.7"
statrs = "0.16"

# GPU and CUDA
cudarc = { version = "0.9", features = ["std"] }

# PRCT Algorithm (local dependency)
prct-core = { path = "foundation/prct-core" }
shared-types = { path = "foundation/shared-types", features = ["std"] }
quantum-engine = { path = "foundation/quantum" }
neuromorphic-engine = { path = "foundation/neuromorphic" }

# Machine Learning
ort = { version = "1.16", features = ["cuda"], optional = true }

# Utilities
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
num-complex = "0.4"
sha2 = "0.10"
hex = "0.4"
bincode = "1.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dashmap = "6.0"
parking_lot = "0.12"
toml = "0.8"
toml_edit = "0.22"
neuromorphic_engine = { path = "foundation/neuromorphic", package = "neuromorphic-engine" }
quantum_engine = { path = "foundation/quantum", package = "quantum-engine" }
futures = "0.3"
hmac = "0.12"
colored = "2.1"
indicatif = "0.17"
rustc_version = "0.4"
ordered-float = "4.2"
rustfft = "6.2"
async-trait = "0.1"
kdtree = "0.7"
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = "1.7"
zstd = "0.13"

# Metrics and profiling
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tempfile = "3"

[[bin]]
name = "prism-ai"
path = "foundation/lib.rs"

# MEC Phase Binaries
[[bin]]
name = "meta-flagsctl"
path = "src/bin/meta_flagsctl.rs"

[[bin]]
name = "meta-ontologyctl"
path = "src/bin/meta_ontologyctl.rs"

[[bin]]
name = "meta-reflexive-snapshot"
path = "src/bin/meta_reflexive_snapshot.rs"

[[bin]]
name = "federated-sim"
path = "src/bin/federated_sim.rs"

[[bin]]
name = "prism-config"
path = "src/bin/prism_config.rs"

# Examples
[[example]]
name = "benchmark_dimacs"
path = "examples/benchmark_dimacs.rs"
required-features = ["cuda", "examples"]

[[example]]
name = "world_record_attempt"
path = "examples/world_record_attempt.rs"
required-features = ["cuda", "examples"]

[[example]]
name = "test_prism_pipeline"
path = "examples/test_prism_pipeline.rs"
required-features = ["cuda", "examples"]

[[example]]
name = "test_ensemble_gpu"
path = "examples/test_ensemble_gpu.rs"
required-features = ["cuda", "examples"]

[[example]]
name = "test_dsjc1000"
path = "examples/test_dsjc1000.rs"
required-features = ["cuda", "examples"]

[[example]]
name = "generate_training_data"
path = "examples/generate_training_data.rs"
required-features = ["examples"]

[profile.release]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
